# sigil

./: .gitignore  .gitmodules  .ignore  CMakeLists.txt  README.md  compile_commands.json  core  main.odin  makefile  meson.build  ols.json
odin/src/: glfw.odin  main.odin  vk.odin
odin/src/systems/: vk.odin
res/models/: basic.gltf
res/shaders/: basic.frag  fft.comp  gradient.comp  gradient.comp.spv  init_spectrum.comp.spv  input_structures.glsl  mesh.vert  mesh.vert.spv  pbr.frag  pbr.frag.spv  pbr.vert  pbr.vert.spv  phase.comp.spv  rect.vert.spv  sky.comp  sky.comp.spv  solid.frag  spectrum.comp.spv  texture.frag  texture.frag.spv  triangle.vert.spv  ui.frag.spv  ui.vert.spv  vingette.comp.spv  wave.vert  wave.vert.spv
res/shaders/fft/: butterfly.comp.spv  h0k.comp.spv  hkt.comp.spv  inversion.comp.spv  twindle_factors.comp.spv
shaders/: basic.frag.spv  gradient.comp  gradient.comp.spv  simple_shader.frag  simple_shader.frag.spv  simple_shader.vert  simple_shader.vert.spv
sigil/core/: module.odin  sigil.odin  sparse_set.odin
sigil/default/: camera.odin  debug.odin  glfw.odin  pbr.odin  rect.odin  scene.odin  vulkan.odin
sigil/default/shaders/: basic.comp  mesh.vert  pbr.frag  pbr.glsl  pbr.vert  triangle.vert  wave.frag
sigil/ism/: camera.odin  debug.odin  glfw.odin  imgui.odin  jolt.odin  mesh.odin  miniaudio.odin  pbr.odin  rect.odin  scene.odin  shaders.odin  shadow.odin  slang_pbr.odin_  test_scene.odin  ui.odin  vulkan.odin  wgpu.odin
sigil/ism/shaders/: bindless.glsl  common.include  common.shared.slang  common.slang  cull.slang  cull.todo  frag.spv  mesh.vert  pbr.frag  pbr.glsl  pbr.slang  pbr.spvasm  pbr.vert  rect.frag  shadow.slang  spheres.frag  texture.frag  ui.frag  ui.vert  vert.spv  wave.vert
src/: camera.odin  component.hh  engine.cc  engine.cpp  engine.h  engine.hh  entity.hh  error.odin  glfw.odin  input.cc  input.hh  main.cc  main.cpp  main.odin  pbr.odin  pipeline.cpp  pipeline.h  rect.odin  renderer.cc  renderer.hh  result.hh  scene.odin  sigil.odin  system.hh  types.odin  util.hh  vulkan.odin  wgpu.odin  window.cc  window.cpp  window.h  window.hh
src/core/: components.hh  data.hh  deletion_queue.hh  engine.cc  engine.hh  entity.hh  math.hh  sigil.cc  sigil.hh  sigil.odin  system.hh  types.hh  util.hh
src/shaders/: fft.comp  fft_ref.comp  gradient.comp  init_spectrum.comp  input_structures.glsl  mesh.vert  ocean.comp  pbr.frag  pbr.glsl  pbr.vert  phase.comp  rect.vert  spectrum.comp  wave.vert
src/shaders/fft/: butterfly.comp  complex.glsl  h0k.comp  hkt.comp  inversion.comp  twiddle_factors.comp
src/systems/: bullet.hh  glfw.hh  glfw.odin  input.cc  input.hh  renderer.cc  renderer.hh  scene.hh  vk_debug.cc  vulkan.hh  window.cc  window.hh
src/systems/glfw/: glfw.cc  glfw.hh  input.cc  input.hh  window.cc  window.hh
src/systems/motion/: motion.hh
src/systems/old_renderer/: old_renderer.cc  old_renderer.hh
src/systems/physics/: physics.hh
src/systems/renderer/: renderer.cc  renderer.hh  ui.hh  vulkan.cc  vulkan.hh
src/systems/renderer/internal/: camera.hh  descriptors.hh  frame.hh  image.cc  (+4 more)
src/systems/vulkan/: _vulkan.hh  descriptors.cc  descriptors.hh  fft.hh  pipelines.cc  primitives.cc  swapchain.cc  ui.cc  vulkan.hh
submodules/: CMakeLists.txt
subprojects/: VulkanMemoryAllocator-Hpp.wrap  imgui.wrap  vulkan-memory-allocator.wrap
subprojects/packagefiles/VulkanMemoryAllocator_patch/: meson.build
subprojects/packagefiles/assimp_patch/: meson.build
subprojects/packagefiles/imgui_patch/: meson.build
subprojects/packagefiles/vk_mem_alloc_hpp_patch/: meson.build
(+2 files in other folders)
